added delete and remove event listeners

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <header>
         <h1>Digital Library</h1>
+        <h5 class="created-by">Created By: Swift928</h5>
     </header>
 
     <div class="container">
@@ -68,18 +69,22 @@
             <div class="book-grid-template book-grid-container">
                 <h3 class="book-title"></h3>
                 <div class="book-content">
-                    <p><strong>Author:</strong> <span class="author"></span></p>
+                    <p class="author-container"><strong>Author:</strong> <span class="author"></span></p>
                     <p><strong>Pages:</strong> <span class="page-count"></span></p>
-                    <p><strong>Read:</strong> <span class="read"></span></p>
+                    <p class="read-container"><strong>Read:</strong> <span class="read"></span></p>
+                    <div class="book-buttons-container">
+                        <button type="button">
+                            <svg id="read-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M21.59,11.59L23,13L13.5,22.5L8.42,17.41L9.83,16L13.5,19.68L21.59,11.59M4,16V3H6L9,3A4,4 0 0,1 13,7C13,8.54 12.13,9.88 10.85,10.55L14,16H12L9.11,11H6V16H4M6,9H9A2,2 0 0,0 11,7A2,2 0 0,0 9,5H6V9Z" /></svg>
+                        </button>
+                        <button type="button" id="made-delete">
+                            <svg id="delete-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z" /></svg>
+                        </button>
+                    </div>
                 </div>
             </div>
             
         </div>
 
     </div>
-
-     <footer>
-        <h5>Created By: Swift928</h5>
-    </footer>
 </body>
 </html>
