--implemented class functions

--- a/index.html
+++ b/index.html
@@ -1,3 +1,16 @@
+<!-- ********************************
+********************************
+-- add better horizontal functionality for adding new book form on smaller screens
+-- make a 'date added' property on the gridItem. it should be the current date, no time
+-- add better pop-up screen for the .info() event listener
+-- add better pop-up screen for when the user does not enter the form fully, and add error messages
+********************************
+********************************
+ -->
+
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,7 +23,7 @@
 <body>
 
     <div id="overlay"></div>
-    
+
     <div class="form-cc">
         <div id="form-container">
             <div class="form-header">
